--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>404 Page</title>
 
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/style_err.css' %}">
 
 </head>
 <body>
@@ -86,7 +86,7 @@
 
 <script src="{% static 'js/parallax.min.js'%}"></script>
 <script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'js/script_err.js' %}"></script>
 
 <script>
 	var back=document.getElementById('back')
