--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 		<header class="logo-env">
 
 			<div class="logo">
-				<a href="index.html">
+				<a href="http://127.0.0.1:8000/app01/home">
 					<h3 style="color:#fff1f0; font-weight: bold;margin-top: 5px ">海洋牧场监测可视化系统</h3>
 				</a>
 			</div>
@@ -115,7 +115,13 @@
 				</a>
 
 			</li>
+			<li class="opened active">
+				<a href="/app01/upload/list">
+					<i class="entypo-gauge"></i>
+					<span>上传数据</span>
+				</a>
 
+			</li>
 
 
 
