--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,30 +30,32 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">海洋牧场后台管理系统</a>
+                    <a class="navbar-brand" href="http://127.0.0.1:8000/app01/home">海洋牧场监测可视化系统</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/app01/account/list">账号管理</a></li>
-                        <li><a href="/app01/staff/list">员工管理</a></li>
+                        <li><a href="/app01/info">主要信息</a></li>
+                        <li><a href="/app01/water">水下系统</a></li>
+                        <li><a href="/app01/data">数据中心</a></li>
+                        <li><a href="/app01/center">智能中心</a></li>
 
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">注册</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                aria-haspopup="true" aria-expanded="false">poker <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+<!--                    <ul class="nav navbar-nav navbar-right">-->
+<!--&lt;!&ndash;                        <li><a href="#">注册</a></li>&ndash;&gt;-->
+<!--                        <li class="dropdown">-->
+<!--                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
+<!--                                aria-haspopup="true" aria-expanded="false">poker <span class="caret"></span></a>-->
+<!--                            <ul class="dropdown-menu">-->
+<!--                                <li><a href="#">Action</a></li>-->
+<!--                                <li><a href="#">Another action</a></li>-->
+<!--                                <li><a href="#">Something else here</a></li>-->
+<!--                                <li role="separator" class="divider"></li>-->
+<!--                                <li><a href="#">Separated link</a></li>-->
+<!--                            </ul>-->
+<!--                        </li>-->
+<!--                    </ul>-->
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
