--- a/templates/login.html
+++ b/templates/login.html
@@ -94,19 +94,31 @@ var baseurl = '';
 				</div>
 
 <!--				<div class="form-group">-->
-<!--					<label>for="id_codde">图片验证码</label>-->
-<!--					<div class="row">-->
-<!--						<div class="col-xs-7">-->
-<!--							<input type="text" name="code" class="form-control" placeholder="请输入验证码">-->
-<!--							<span style="color: red;"></span>-->
+<!--					<div class="input-group">-->
+<!--						<div class="input-group-addon">-->
+<!--							<i class="entypo-user"></i>-->
 <!--						</div>-->
-<!--						<div>-->
-<!--							<img id="image_code" src="{% static 'image/code'%}" >-->
-<!--						</div>-->
-<!--						<input type="password" class="form-control" name="password" id="password" placeholder="密码" autocomplete="off">-->
+<!--						<input type="text" class="form-control" name="code" id="code" placeholder="验证码" autocomplete="off">-->
 <!--					</div>-->
-
 <!--				</div>-->
+
+				<!--						<div class="col-xs-5">-->
+<!--							<img id="image_code1" src="/app01/image/code" style="width:125px" >-->
+<!--						</div>-->
+
+				<div class="form-group">
+					<label for="id_codde">图片验证码</label>
+					<div class="row">
+						<div class="col-xs-7">
+							<input type="text" name="code" class="form-control" placeholder="请输入验证码" style="border-color: blue">
+							<span style="color: black"></span>
+						</div>
+						<div class="col-xs-5">
+							<img id="image_code1" src="/app01/image/code" style="width:125px" >
+						</div>
+					</div>
+
+				</div>
 
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary btn-block btn-login">
